[package]
name = "betacode2"
version = "0.1.3"
edition = "2021"
description = "A fast rust library for conversion to and from betacode."
authors = ["Jay Rhoden <hello@scripturial.com"]
license = "MIT"
repository = "https://github.com/scripturial/betacode"
readme = "README.md"
keywords = ["betacode", "biblical-greek", "beta-code", "linguistics"]
categories = ["parsing", "plugins"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
